Update to Quarkus 2.3.0.Final (Part 1)